--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,14 +1,15 @@
-html,
-body {
+body, html {
   height: 100%;
   width: 100%;
+  min-width: 960px;
 }
 
 body {
-  height: auto;
-  min-height: 100%;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-shrink: 0;
+  flex-direction: column;
+}
+
+#app,
+#page {
+  height: 100%;
 }
